# Intel-8080-Emulator-Base

./: .gitignore  LICENSE  Makefile  README.md  main  main.cpp
src/: CMakeLists.txt  Makefile  cpu.cpp  cpu.h  cpu_dia.com  example.com  instructions.cpp  instructions.h  main.cpp
src/bus/: CMakeLists.txt  buscontroller.cpp  buscontroller.h
src/bus/device/: ram.cpp  ram.h  ramdebug.cpp  ramdebug.h  rom.h
src/bus/model/: busdevice.cpp  busdevice.h  chipregion.cpp  chipregion.h
src/core/: CMakeLists.txt  alu.cpp  alu.h  instructions.cpp
src/instruction/: CMakeLists.txt  instructiondecoder.cpp  instructiondecoder.h  instructions.cpp  instructions.h
src/io/: CMakeLists.txt  iocontroller.cpp  iocontroller.h
src/io/device/: altairswitches.cpp  altairswitches.h  serialout.cpp  serialout.h  sio.cpp  sio.h
src/io/model/: iodevice.cpp  iodevice.h
src/memorymapper/model/: chipregion.cpp  chipregion.h  ram.cpp  ram.h
src/memorymapper/model/base/: memorychip.h
src/registers/: CMakeLists.txt  registercontroller.cpp  registercontroller.h  registers.h
src/registers/model/: flagenum.h  flagregister.cpp  flagregister.h  memoryreference.cpp  memoryreference.h  register.cpp  register.h  stack.cpp  stack.h
src/roms/: 4KBASICVer4-0.tap
src/test/: CMakeLists.txt  myfunctions.h  mytests.cpp
test/: CMakeLists.txt  Makefile  instructions.cpp  integration.cpp  main.cpp
test/bus/: buscontollertest.cpp  buscontrollertest.cpp
test/bus/device/: ramtest.cpp
test/registers/: registercontroller.cpp
test/registers/model/: flagregistertest.cpp  stacktest.cpp
